# django_rest_framework

./: .dockerignore  .env.template  CHANGELOG.md  README.md  docker-compose.yml  main.py  manage.py  pyproject.toml
django_rest_framework/: apps.py
django_rest_framework_template/: asgi.py  settings.py  urls.py  wsgi.py
docs/: 01_バージョンについて.md  README.md
user/: models.py
