[project]
name = "django-rest-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.7",
    "django-import-export>=4.3.10",
    "djangorestframework>=3.16.1",
    "drf-spectacular>=0.28.0",
    "psycopg>=3.2.10",
]
